--- a/index.html
+++ b/index.html
@@ -12,28 +12,43 @@
             <script>
                 // request data 
                 const requestData = async () => {
-                    let bitcoinActivity = await d3.csv("btc-daily.csv");
+                    const bitcoinActivity = await d3.csv("btc-daily.csv");
                     console.log(bitcoinActivity);
-                    let svg = d3.select("svg#all");
+                    let svg = d3.select("svg");
                     let width = svg.attr("width");
                     let height = svg.attr("height");
 
                     // x scale (date)
-                    const xExtent = d3.extent(bitcoinActivity, d=> d.date);
+                    const dates = [];
+                    bitcoinActivity.forEach( d => {
+                        var date = new Date(d['date']);
+                        dates.push(date);    
+                    });
+                    // console.log(dates);
+                    const xExtent = d3.extent(bitcoinActivity, d=> new Date(d.date));
                     console.log(xExtent);
                     let xScale = d3.scaleTime()
                         .domain(xExtent) //from data
                         .range([10, width-10])
                     
                     // y scale (volume of tokens exchanged)
-                    const yExtent = d3.extent(bitcoinActivity, d=> d["volume-btc"]);
+                    const yExtent = d3.extent(bitcoinActivity, d => d['volume-btc']);
+                    console.log(yExtent)
                     let yScale = d3.scaleLinear()
                         .domain(yExtent)
                         .range([10, height-10]);
 
+                    // create axes
+                    let leftAxis = d3.axisLeft(yScale).tickFormat(d3.format(.0));
+                    let leftGridlines = d3.axisLeft(yScale)
+                                         .tickSize(-width - 10)
+                                         .tickFormat('');
+                    
+                    let bottomAxis = d3.axisBottom(xScale);
+
                     bitcoinActivity.forEach((d, i) => {
                         svg.append("circle")
-                            .attr("cx", xScale(d['date']))
+                            .attr("cx", xScale(Date.parse(d['date'])))
                             .attr("cy", yScale(d['volume-btc']))
                             .attr('r', 2)
                             .style('fill', 'blue');
